# Goel

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
src/: dashboard.py
src/bot/: __init__.py  __main__.py  client.py  config.py  evaluator.py  executor.py  main.py  orderbook.py  risk.py  types.py
tests/: __init__.py  test_config.py  test_orderbook.py  test_types.py
